Fix Session Notification Translation
Cause by the transition to String Catalog which don’t require escape, will be take care internally by Xcode.

--- a/Supporting Files/Localizable.xcstrings
+++ b/Supporting Files/Localizable.xcstrings
@@ -1098,7 +1098,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "\\\"%@\\\" in Room \\\"%@\\\", please keep your time of buffer to reach the room."
+            "value" : "\"%@\" in Room \"%@\", please keep your time of buffer to reach the room."
           }
         },
         "zh-Hant" : {
