Add in-app translation for Event info
Introduces in-app translation for Event information that cannot be translated directly using the app’s supported languages.
- Supports iOS 17.4+ for basic translation and iOS 18+ for advanced on-device translation.
- Currently limited to session introduction translation between any language.
- Future updates will expand support to more content.

--- a/Supporting Files/Localizable.xcstrings
+++ b/Supporting Files/Localizable.xcstrings
@@ -1863,6 +1863,22 @@
         }
       }
     },
+    "Translate" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "翻訳する"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "翻譯"
+          }
+        }
+      }
+    },
     "Try Again" : {
       "localizations" : {
         "ja" : {
