fix typo in ja localizable strings

--- a/Supporting Files/Localizable.xcstrings
+++ b/Supporting Files/Localizable.xcstrings
@@ -2158,7 +2158,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "スピーカー"
+            "value" : "日"
           }
         },
         "zh-Hant" : {
